# solana_101_workshop

./: README.md
module-1/: README.md
module-1/sample-project/: README.md
module-1/sample-project/client/: package.json  tsconfig.json
module-1/sample-project/client/src/: index.ts
module-1/sample-project/program/: Cargo.toml
module-1/sample-project/program/src/: lib.rs
module-2/: README.md
module-2/counter-program/: Cargo.toml
module-2/counter-program/src/: lib.rs
module-2/counter-program/src/client/: main.rs
module3/: Anchor.toml  README.md  package.json
module3/programs/marketplace/: Cargo.toml
module3/programs/marketplace/src/: lib.rs
module3/tests/: marketplace.ts
